Added downloader, nodes, server starting- and stopping API, and more